--- a/index.html
+++ b/index.html
@@ -120,34 +120,12 @@
     
 
   </main>
-
-  Samuel Green
-  Available to Walk
-
-  That sounds great. I’d be happy with that.
-
-
-  
-
-  
-
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
   
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    Challenge by <a href="https://www.frontendmentor.io/challenges/chat-app-css-illustration-O5auMkFqY" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://www.frontendmentor.io/profile/andrewsiachos" target="_blank">Andreas Siachos</a>.
+  </footer>
 
   <script src="app.js"></script>
 </body>
